--- a/frontend-react/src/styles/index.css
+++ b/frontend-react/src/styles/index.css
@@ -10,9 +10,11 @@ body {
 
 main {
   width: auto;
+  border: solid 0px black;
 }
 
 header {
+  display: flex;
   width: auto;
-  border: solid 1px black;
+  border: solid 0px black;
 }
