--- a/frontend-react/src/styles/table.css
+++ b/frontend-react/src/styles/table.css
@@ -14,7 +14,8 @@
 
 .styled-table th,
 .styled-table td {
-  padding: 12px 15px;
+  padding: 12px 12px;
+  border: solid 0px black;
 }
 
 .styled-table tbody tr {
@@ -26,13 +27,18 @@
 }
 
 .active-row {
+  width: auto;
   background-color: rgb(190, 243, 225);
 }
 
 .active-row input {
   width: 100%;
+  padding: 4px;
   border: solid 1px rgb(9, 142, 146);
-  padding: 4px 10px;
-  margin: 5px;
-  font-size: 15px;
+}
+
+.active-row select {
+  width: 100%;
+  padding: 4px;
+  border: solid 1px rgb(9, 142, 146);
 }
